take the one with the best aucroc on the validation set

--- a/jupyter/mymoleculenet_chemberta.ipynb
+++ b/jupyter/mymoleculenet_chemberta.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3ed8967f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,8 @@
     "from torch.optim import Adam\n",
     "\n",
     "from pytorch_lightning import Trainer\n",
-    "from pytorch_lightning.metrics import Accuracy\n",
+    "from pytorch_lightning.metrics import Metric\n",
+    "from pytorch_lightning.metrics.functional.classification import auroc\n",
     "import torch.nn as nn\n",
     "\n",
     "import numpy as np \n",
@@ -40,13 +41,14 @@
     "import wandb\n",
     "from pytorch_lightning.loggers import WandbLogger  # newline 1\n",
     "from pytorch_lightning.callbacks import ModelCheckpoint\n",
-    "import torch"
+    "import torch\n",
+    "from typing import Optional, Sequence, Any"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e643062a",
+   "execution_count": 4,
+   "id": "f8cf1c92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "82e12661",
    "metadata": {},
    "outputs": [],
@@ -63,7 +65,33 @@
     "import glob\n",
     "import pandas as pd\n",
     "datasets = ['bbbp', 'clintox', 'tox21', 'hiv']\n",
-    "data_dir_pattern = \"datasets/mymoleculenet/%s/\"\n"
+    "data_dir_pattern = \"../../../2021/graph-transformer-feature-dataloader/datasets/mymoleculenet/%s/\"\n",
+    "class AUROC(Metric):\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            sample_weight: Optional[Sequence] = None,\n",
+    "            compute_on_step: bool = False,  # True likely crashes if not every batch contains all classes\n",
+    "            dist_sync_on_step: bool = False,\n",
+    "            process_group: Optional[Any] = None,\n",
+    "    ):\n",
+    "        super().__init__(\n",
+    "            compute_on_step=compute_on_step,\n",
+    "            dist_sync_on_step=dist_sync_on_step,\n",
+    "            process_group=process_group,\n",
+    "        )\n",
+    "\n",
+    "        self.sample_weight = sample_weight\n",
+    "        self.add_state(\"all_preds\", default=[])\n",
+    "        self.add_state(\"all_target\", default=[])\n",
+    "\n",
+    "    def update(self, preds: torch.Tensor, target: torch.Tensor) -> None:\n",
+    "        self.all_preds.append(preds)\n",
+    "        self.all_target.append(target)\n",
+    "\n",
+    "    def compute(self):\n",
+    "        preds_tensor = torch.cat(self.all_preds).squeeze()\n",
+    "        target_tensor = torch.cat(self.all_target).squeeze()\n",
+    "        return auroc(preds_tensor, target_tensor, sample_weight=self.sample_weight)\n"
    ]
   },
   {
@@ -76,10 +104,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at seyonec/PubChem10M_SMILES_BPE_60k were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.weight', 'lm_head.decoder.weight', 'lm_head.bias', 'roberta.pooler.dense.bias', 'lm_head.dense.bias', 'lm_head.decoder.bias', 'lm_head.layer_norm.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.weight']\n",
+      "Some weights of the model checkpoint at seyonec/PubChem10M_SMILES_BPE_60k were not used when initializing RobertaForSequenceClassification: ['lm_head.decoder.weight', 'lm_head.bias', 'lm_head.decoder.bias', 'lm_head.layer_norm.bias', 'lm_head.dense.weight', 'lm_head.dense.bias', 'roberta.pooler.dense.bias', 'roberta.pooler.dense.weight', 'lm_head.layer_norm.weight']\n",
       "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at seyonec/PubChem10M_SMILES_BPE_60k and are newly initialized: ['classifier.out_proj.weight', 'classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias']\n",
+      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at seyonec/PubChem10M_SMILES_BPE_60k and are newly initialized: ['classifier.dense.weight', 'classifier.out_proj.weight', 'classifier.out_proj.bias', 'classifier.dense.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
       "GPU available: True, used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
@@ -92,7 +120,7 @@
      "data": {
       "text/html": [
        "\n",
-       "                    Syncing run <strong><a href=\"https://wandb.ai/dfstransformer/moleculenet10-baselines/runs/zl1p2z7f\" target=\"_blank\">chemberta</a></strong> to <a href=\"https://wandb.ai/dfstransformer/moleculenet10-baselines\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
+       "                    Syncing run <strong><a href=\"https://wandb.ai/dfstransformer/moleculenet10-baselines/runs/1o0x3j6a\" target=\"_blank\">chemberta</a></strong> to <a href=\"https://wandb.ai/dfstransformer/moleculenet10-baselines\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
        "\n",
        "                "
       ],
@@ -131,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ae51973aa924507935966e3addf4f4e",
+       "model_id": "843b46a91ab543ef8ad7b7afc6ca3b44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,7 +201,63 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "466305ed03d0418298e1510acc0ea09e",
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "551628c720384bfead0a680ef86df4bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,7 +286,7 @@
     "        # Build the pytorch lightning training module:\n",
     "        pl_module = TrainingModule(model,\n",
     "                                   loss_fn=BCEWithLogitsLoss(),\n",
-    "                                   metric_cls=Accuracy,\n",
+    "                                   metric_cls=AUROC,\n",
     "                                   optimizer=Adam(model.parameters(), lr=3e-6))\n",
     "        pl_module.cuda()\n",
     "        \n",
@@ -223,7 +307,7 @@
     "\n",
     "\n",
     "        # Build the pytorch lightning trainer and fine-tune the module on the train dataset:\n",
-    "        checkpoint_callback = ModelCheckpoint(monitor=\"valid_loss\", mode=\"min\")\n",
+    "        checkpoint_callback = ModelCheckpoint(monitor=\"valid_auroc\", mode=\"max\")\n",
     "        \n",
     "        trainer = Trainer(max_epochs=25, gpus=[0], logger=wandb_logger, callbacks=[checkpoint_callback])\n",
     "        #trainer.tune(pl_module,  train_dataloader=train_loader)\n",
@@ -248,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbb2d909",
+   "id": "b85223ea",
    "metadata": {},
    "outputs": [],
    "source": []
