--- a/jupyter/mymoleculenet_chemberta.ipynb
+++ b/jupyter/mymoleculenet_chemberta.ipynb
@@ -325,8 +325,12 @@
     "        rocs += [roc_auc_score(test_y, preds)]\n",
     "        prcs += [average_precision_score(test_y, preds)]\n",
     "        wandb.log({'roc_test':rocs[-1], 'prc_test':prcs[-1]})\n",
-    "    wandb.log({'mean_roc_test':np.mean(rocs), 'std_roc_test':np.std(rocs),\n",
-    "             'mean_prc_test':np.mean(prcs), 'std_prc_test':np.std(rocs)})"
+    "    wandb.log({'mean_roc_test':np.mean(rocs), \n",
+    "               'std_roc_test':np.std(rocs),\n",
+    "               'ci_roc_test':1.96*np.std(rocs)/np.sqrt(10),\n",
+    "               'mean_prc_test':np.mean(prcs), \n",
+    "               'std_prc_test':np.std(prcs),\n",
+    "               'ci_prc_test':1.96*np.std(prcs)/np.sqrt(10)})"
    ]
   },
   {
