--- a/jupyter/mymoleculenet_chemberta.ipynb
+++ b/jupyter/mymoleculenet_chemberta.ipynb
@@ -91,7 +91,8 @@
     "    def compute(self):\n",
     "        preds_tensor = torch.cat(self.all_preds).squeeze()\n",
     "        target_tensor = torch.cat(self.all_target).squeeze()\n",
-    "        return auroc(preds_tensor, target_tensor, sample_weight=self.sample_weight)\n"
+    "        return auroc(preds_tensor, target_tensor, sample_weight=self.sample_weight)\n",
+    "wandb.init()"
    ]
   },
   {
