--- a/jupyter/mymoleculenet_mat.ipynb
+++ b/jupyter/mymoleculenet_mat.ipynb
@@ -54,6 +54,7 @@
    "source": [
     "import glob\n",
     "import pandas as pd\n",
+    "from typing import Optional, Sequence, Any\n",
     "\n",
     "class AUROC(Metric):\n",
     "    def __init__(\n",
@@ -83,7 +84,7 @@
     "        return auroc(preds_tensor, target_tensor, sample_weight=self.sample_weight)\n",
     "\n",
     "datasets = ['bbbp', 'clintox', 'tox21', 'hiv']\n",
-    "data_dir_pattern = \"datasets/mymoleculenet/%s/\"\n"
+    "data_dir_pattern = \"datasets/mymoleculenet/%s/\""
    ]
   },
   {
@@ -153,6 +154,14 @@
     "               'std_prc_test':np.std(prcs),\n",
     "               'ci_prc_test':1.96*np.std(prcs)/np.sqrt(10)})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c30d0f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
