--- a/jupyter/mymoleculenet_chemberta.ipynb
+++ b/jupyter/mymoleculenet_chemberta.ipynb
@@ -325,8 +325,8 @@
     "        preds = np.concatenate(preds, axis=0)[:, 0]\n",
     "        rocs += [roc_auc_score(test_y, preds)]\n",
     "        prcs += [average_precision_score(test_y, preds)]\n",
-    "        wandb.log({'roc_test':rocs[-1], 'prc_test':prcs[-1]})\n",
-    "    wandb.log({'mean_roc_test':np.mean(rocs), \n",
+    "        wandb_logger.log_metrics({'roc_test':rocs[-1], 'prc_test':prcs[-1]})\n",
+    "    wandb_logger.log_metrics({'mean_roc_test':np.mean(rocs), \n",
     "               'std_roc_test':np.std(rocs),\n",
     "               'ci_roc_test':1.96*np.std(rocs)/np.sqrt(10),\n",
     "               'mean_prc_test':np.mean(prcs), \n",
